# TrendOPS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dashboard.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  schemas.py  setup_structure.sh  test_report.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/chromadb/: chroma.sqlite3
data/reports/daily/: Daily_Report_2026-02-01.md
docker/: docker-compose.dev.yml
monitoring/: metrics.py  prometheus.yml
monitoring/alerts/: trendops_alerts.yml
monitoring/grafana/dashboards/: trendops-detail.json  trendops-pipeline.json
monitoring/provisioning/dashboards/: dashboards.yml
monitoring/provisioning/datasources/: datasources.yml  prometheus.yml
report/: daily_report.py
report/templates/: daily_report.md.j2
scripts/: benchmark.py  demo.py  init_db.sql  real_e2e_pipeline.py  run_scheduler.py
src/trendops/: __init__.py  pipeline.py  schemas.py
src/trendops/analyst/: __init__.py  analyzer_llm.py  guardrail.py  safe_pipeline.py  structured_analyzer.py
src/trendops/api/: main.py  metrics.py
src/trendops/api/routes/: analysis.py  health.py  keywords.py  pipeline.py  publications.py
src/trendops/collector/: collector_base.py  collector_rss.py  collector_rss_google.py  collector_youtube.py
src/trendops/config/: settings.py
src/trendops/core/: error_handler.py
src/trendops/database/: __init__.py  connection.py  models.py  repository.py
src/trendops/pipeline/: data_pipeline.py
src/trendops/publisher/: notifier.py  report_service.py  review_gate.py  scheduler.py  threads_publisher.py
src/trendops/queue/: queue_models.py  queue_redis.py
src/trendops/search/: bm25_index.py  hybrid_search.py
src/trendops/service/: deduplicator.py  embedding_service.py
src/trendops/store/: vector_store.py
src/trendops/trigger/: trigger_google.py
src/trendops/utils/: logger.py
tests/: conftest.py  manual_e2e_week1.py  test_api.py  test_integration.py  test_pipeline_unit.py  test_week3_day2.py  test_week3_day5_hybrid_search.py  test_week3_day6_integration.py  test_week4_day1_structured.py  test_week4_day2_schemas.py  test_week4_day6_integration.py  test_week5_day1.py  test_week5_day2.py  test_week5_day3.py  test_week5_day4.py  test_week5_day6.py  test_week6_day1_docker.py  test_week6_day2_database.py  test_week6_day3.py  test_week6_day6.py
tests/test_data/chromadb/: chroma.sqlite3
